--- a/client/main.less
+++ b/client/main.less
@@ -1,5 +1,5 @@
 body {
-  background: url('https://ununsplash.imgix.net/uploads/141362941583982a7e0fc/abcfbca1?q=75&fm=jpg&s=5266baf09e0e878b72b2e34adf2f54a0') fixed;
+  background: url('./images/new-york-city-336475_1920.jpg') fixed;
   background-size: cover;
   padding: 0;
   margin: 0;
